--- a/src/components/Expenses/ExpenseDate.css
+++ b/src/components/Expenses/ExpenseDate.css
@@ -9,6 +9,7 @@
     align-items: center;
     border: 1px solid white;
     border-radius: 10px;
+    box-shadow: 0.1rem 0.1rem #fff;
 }
 
 .expense-item__month {
