--- a/src/components/Expenses/Expense.css
+++ b/src/components/Expenses/Expense.css
@@ -1,8 +1,6 @@
 .expense {
-    background-color: #181818;
     padding: 1rem;
     width: 50rem;
     max-width: 95%;
-    margin: 2rem auto;
-    
+    margin: 0 auto;
 }
